--- a/debian/control
+++ b/debian/control
@@ -9,4 +9,5 @@ Standards-Version: 3.9.2
 Package: ros-humble-ros-workspace
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, 
+Conflicts: libsystemd0 (<= 249.11-0ubuntu3), libudev1 (<= 249.11-0ubuntu3)
 Description: Provides the prefix level environment files for ROS 2 packages.
