--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros_workspace
-	previous = 
-	base = 5d6db10
+	previous = 5d6db10
+	base = 03e1ea6
 	trim = 
 	trimbase = 
