--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros_workspace
-	previous = 
-	base = 204f6b2
+	previous = 204f6b2
+	base = e71ca21
 	trim = 
 	trimbase = 
