--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ros_workspace
-	previous = 
-	base = 4a7822f
+	previous = 4a7822f
+	base = 8cf5a52
 	trim = 
 	trimbase = 
