--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ros_workspace
-	previous = 
-	base = b8b4dfc
+	previous = b8b4dfc
+	base = 15dacb6
 	trim = 
 	trimbase = 
