--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = rpm/rolling/ros_workspace
+	parent = rpm/jazzy/ros_workspace
 	previous = 6d141f957976
 	base = 49d767d1ac92
 	trim = 
