--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.3-5": ["Thu Mar 07 2024", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"], "1.0.3-4": ["Wed Mar 06 2024", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"]}
+{"1.0.3-6": ["Fri Apr 19 2024", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"], "1.0.3-5": ["Thu Mar 07 2024", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"], "1.0.3-4": ["Wed Mar 06 2024", "Michael Jeronimo", "michael.jeronimo@openrobotics.org"]}
